# Watchit

./: .env  .gitignore  Python Home Task (1).docx  README.md  pyproject.toml
microservices/alert-notifier-service/: .gitignore  README.md  main.py  pyproject.toml
microservices/alert-notifier-service/alert_notifier_service/api/: middlewares.py
microservices/alert-notifier-service/alert_notifier_service/clients/: alert_notifier_client.py  alert_notifier_client_base.py
microservices/alert-notifier-service/alert_notifier_service/domains/: alert_notifier_domain.py  alert_notifier_domain_base.py
microservices/alert-notifier-service/alert_notifier_service/models/: alert_models.py
microservices/alert-notifier-service/alert_notifier_service/resources/: config.py  config.yaml  defines.py  settings.py
microservices/alert-notifier-service/alert_notifier_service/services/: alert_notifier_log_service.py  alert_notifier_service_base.py
microservices/monitor-sensors-service/: .env  .gitignore  README.md  main.py  pyproject.toml
microservices/monitor-sensors-service/monitor_sensors_service/api/: middlewares.py
microservices/monitor-sensors-service/monitor_sensors_service/clients/: sensor_monitor_client.py  sensor_monitor_client_base.py
microservices/monitor-sensors-service/monitor_sensors_service/domains/: sensor_monitor_domain.py  sensor_monitor_domain_base.py
microservices/monitor-sensors-service/monitor_sensors_service/models/: sensor_models.py
microservices/monitor-sensors-service/monitor_sensors_service/resources/: config.py  config.yaml  defines.py  (+1 more)
(+5 files in other folders)
